tests/saved_state_update_whitespace/saved_state_update_whitespace.exp
Error -------------------------------------------------------------------------------------------------------- a.js:6:10

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   6|   // $FlowFixMe[missing-annot]
               ^^^^^


Error -------------------------------------------------------------------------------------------------------- a.js:6:17

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   6|   // $FlowFixMe[missing-annot]
                      ^^^^^^^



Found 2 errors

The Flow server is currently in filesystem lazy mode and is only checking 2/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
